Imager release history.  Older releases can be found in Changes.old

Imager 0.75
===========

 - use PERL_NO_GET_CONTEXT to slightly improve performance on threaded
   perls (not measured)

Bugs:

 - an opacity fill based on a fountain fill would segfault when
   filling an 8-bit/sample image.

Imager 0.74 - 7 May 2010
===========

Bug fixes:

 - read_multi() didn't handle a missing file format library correctly,
   aborting on failing to call i_readgif_multi_wiol() or
   i_readtiff_multi_wiol().

 - fix spelling errors patched by Debian
   http://svn.debian.org/viewsvn/pkg-perl/trunk/libimager-perl/debian/patches/spelling.patch?revision=54839&view=markup

 - add an (unshipped) author test to spellcheck Imager's POD.

 - update the TIFF file format documentation
   https://rt.cpan.org/Ticket/Display.html?id=56510

 - lib/Imager/IO.pod was written almost 4 years ago but never shipped.

Imager 0.73 - 15 Mar 2010
===========

 - implement outline circles, both anti-aliased and not
   https://rt.cpan.org/Ticket/Display.html?id=19755

 - a combine => "none" fill to a 1 or 3 channel image would produce
   the incorrect colour.

Imager 0.72 - 09 Dec 2009
===========

Bump version for release, since 0.71_03 is stable with CPAN testers.

Imager 0.71_03 - 5 Dec 2009
==============

 - further adjust the threads test so it only performs the tests on
   perls where it's expected to work, and only if the threads module
   can be loaded.

Imager 0.71_02 - 1 Dec 2009
==============

 - adjust the way we load the threads module for the threads test so
   it works with non-threaded perls

Imager 0.71_01 - 30 Nov 2009
===========

Bug fixes:

 - use scanline oriented operations to flip images instead of pixel
   operations
   https://rt.cpan.org/Ticket/Display.html?id=39278

 - use double/sample operations to flip large sample images instead of
   8-bit sample operations.
   https://rt.cpan.org/Ticket/Display.html?id=39280

 - fix POD nits